--- a/doc/requirements.txt
+++ b/doc/requirements.txt
@@ -1,7 +1,12 @@
 m2r2
 matplotlib==3.5.3
-pillow==10.0.1
+numpy==1.26.4
+pillow==10.3.0
 sphinx==4.5.0
-sphinx-copybutton
+sphinx-copybutton==0.5.2
 sphinx-gallery==0.10.1
-matplotlib
+sphinxcontrib-applehelp==1.0.4
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-htmlhelp==2.0.1
+sphinxcontrib-serializinghtml==1.1.5
